// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With more than one feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="accordionStyles-root-15 accordionStyles-no-inner-padding-18"
      >
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-16 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-19 Mui-expanded accordionStyles-summaryExpanded-20"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-21 Mui-expanded accordionStyles-summaryExpanded-20"
            >
              <h6
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                measurements
              </h6>
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-20 MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-entered"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD Table-module_Table--no-border__qGT3p"
                      >
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              feature1
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 in
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              feature2
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 in
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-16 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-19 Mui-expanded accordionStyles-summaryExpanded-20"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-21 Mui-expanded accordionStyles-summaryExpanded-20"
            >
              <h6
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                measurements
              </h6>
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-20 MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-entered"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD Table-module_Table--no-border__qGT3p"
                      >
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              class2-feature1
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 in
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              class2-feature2
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 in
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div
        class="accordionStyles-root-1 accordionStyles-no-inner-padding-4"
      >
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5 Mui-expanded accordionStyles-summaryExpanded-6"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-7 Mui-expanded accordionStyles-summaryExpanded-6"
            >
              <h6
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                measurements
              </h6>
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-6 MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-entered"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD Table-module_Table--no-border__qGT3p"
                      >
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              feature1
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiAccordion-root accordionStyles-item-2 Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root accordionStyles-summaryRoot-5 Mui-expanded accordionStyles-summaryExpanded-6"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content accordionStyles-summaryContent-7 Mui-expanded accordionStyles-summaryExpanded-6"
            >
              <h6
                class="MuiTypography-root Typography-module_Typography__aA2Zb MuiTypography-h6"
              >
                measurements
              </h6>
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded accordionStyles-summaryExpanded-6 MuiIconButton-edgeEnd"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-entered"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root accordion-details"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD Table-module_Table--no-border__qGT3p"
                      >
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                            >
                              c2-feature1
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                            >
                              200 
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With a feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD"
        >
          <thead
            class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                measurements
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200 in
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-module_Table__S9QdU Table-module_Table--row-even-color__rIiXD"
        >
          <thead
            class="MuiTableHead-root ColorPair-module_ColorPair__-7yq5 ColorPair-module_ColorPair--pearl__gkooI"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                measurements
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when no classifications provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      MC: pdp.noTechSpecMessage
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly with microcopy text when no classifications and microcopy text is provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      No technical specifications found for this product.
    </div>
  </div>
</body>
`;
